<resources>
    <string name="app_name">VRun</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section %1$d</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Group Name</string>
    <string name="attending">Attending</string>
    <string name="not_attending">Not attending</string>
    <string name="distance">Distance</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="password_repeat">Password repeat</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="signing_up">Signing up</string>
    <string name="welcome">Welcome!</string>
    <string name="failed">Failed</string>
    <string name="finish">Finish</string>
    <string name="when">When ?</string>
    <string name="how_much_in_meters">How much ? (in meters)</string>
    <string name="for_how_long">For how long ?</string>
    <string name="run_saved_successfully">Run saved successfully</string>
    <string name="error_click_to_retry">Error. Click to retry</string>
    <string name="new_run">New run</string>
    <string name="tap_a_run">Tap on a run</string>
    <string name="login">Login</string>
    <string name="vrun">© VRun</string>
    <string name="run_title">Run title</string>
    <string name="best_run">Best run </string>
    <string name="last_run">Last run </string>
    <string name="coming_event">Coming event </string>
    <string name="title_activity_group_members">GroupMembersActivity</string>
    <string name="group_members">Group members</string>
    <string name="iphone_user">iPhone user</string>
    <string name="group_vrun_name">VRun</string>
    <string name="title_activity_attending">AttendingActivity</string>
    <string name="members_attending_status">Members attending status</string>
    <string name="remove_run">Remove run</string>
    <string name="send_notification">Send notification</string>
    <string name="who_is_attending">Who\'s coming ?</string>
    <string name="feedback">Feedback</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_via_gmail">Send feedback via GMail</string>
    <string name="name">Name</string>
    <string name="email_title">Email</string>
    <string name="phone_title">Phone</string>
    <string name="overall_title">Overall</string>
    <string name="average">Average</string>
    <string name="progress_title">Progress</string>
    <string name="coming">Coming</string>
    <string name="past">Past</string>
    <string name="apple_users_status">Apple users status</string>
    <string name="please_add_a_screenshot">Please add a screenshot if you can</string>
    <string name="please_attach_screenshot">Please attach screenshot</string>
    <string name="title_activity_show_run">Training Details</string>
    <string name="action_map">Map</string>
    <string name="title_activity_training_view">TrainingViewActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="training_view">Training View</string>
</resources>
