<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.drukido.vrun.ui.NewRunActivity"
    android:background="@android:color/white">

    <ProgressBar
        android:id="@+id/newRun_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/newRun_mainLinearLayout"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/run_title"
            android:id="@+id/newRun_etxtRunTitle"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/newRun_btnWhen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/when"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/newRun_btnDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/how_much_in_meters"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/newRun_btnDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/for_how_long"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/newRun_btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>
