<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white"
        android:id="@+id/card_profile_user_details_cardView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_profile_user_details_progressBar"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:id="@+id/card_profile_user_details_mainLinearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/name"
                    android:padding="3dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/user_name"
                    android:padding="3dp"
                    android:maxLines="1"
                    android:id="@+id/card_profile_user_details_txtView_userName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/email_title"
                    android:padding="3dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/email"
                    android:padding="3dp"
                    android:maxLines="1"
                    android:id="@+id/card_profile_user_details_txtView_email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/phone_title"
                    android:padding="3dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/phone_number"
                    android:padding="3dp"
                    android:maxLines="1"
                    android:id="@+id/card_profile_user_details_txtView_phoneNumber"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>