<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.drukido.vrun.ui.RunMeasureActivity"
    android:background="@android:color/white">

    <ProgressBar
        android:id="@+id/runMeasure_progressView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/runMeasure_mainLinearLayout"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/runMeasure_btnDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/how_much_in_meters"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/runMeasure_btnDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/for_how_long"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/runMeasure_btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finish"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>
