<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context="com.drukido.vrun.ui.SendFeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendFeedback_mainRelativeLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:id="@+id/textView"
            android:textColor="@color/secondary_text"/>

        <EditText
            android:id="@+id/sendFeedback_editText_Subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:id="@+id/textView2"
            android:layout_below="@+id/sendFeedback_editText_Subject"
            android:layout_alignParentStart="true"
            android:textColor="@color/secondary_text"/>

        <EditText
            android:id="@+id/sendFeedback_editText_Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/sendFeedback_btn_sendFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/send_feedback_via_gmail"
            android:layout_below="@+id/sendFeedback_editText_Message"
            android:layout_marginTop="5dp" />

    </RelativeLayout>
</ScrollView>

