<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.drukido.vrun.LoginActivity"
    android:id="@+id/login_relativeLayout_mainLayout"
    android:background="#263238">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/vrun_login_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/login_linearLayout_txtFields"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:background="#90263238">

        <EditText
            android:id="@+id/login_etxtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimaryLight"
            android:textColor="@color/colorPrimaryLight"/>

        <EditText
            android:id="@+id/login_etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimaryLight"
            android:textColor="@color/colorPrimaryLight"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/login_linearLayout_txtFields"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:id="@+id/login_btnLogin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:background="@color/colorAccent"
            android:id="@+id/login_btnSignup"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_above="@+id/login_linearLayout_txtFields"
        android:scaleType="centerInside"
        android:src="@drawable/vrunlogo_copyrights"
        android:background="#90263238"
        android:padding="20dp"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:id="@+id/login_mainLayout">-->

        <!--<EditText-->
            <!--android:id="@+id/login_etxtUserName"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="User name"/>-->

        <!--<EditText-->
            <!--android:id="@+id/login_etxtPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Password"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:password="true"/>-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Login"-->
            <!--android:id="@+id/login_btnLogin"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <!--<Button-->
            <!--android:id="@+id/login_btnSignup"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="Sign up"-->
            <!--android:layout_marginTop="10dp"/>-->

    <!--</LinearLayout>-->

</RelativeLayout>
